--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
   <title>Homepage</title>
 </head>
 <body>
-
+  <div id = "oldEnough">
+    <h1>Relevant Voting Information</h1>
+    <h2>Here you can register to vote</h2>
+    <a href ="https://sos.oregon.gov/voting/Pages/registration.aspx?lang=en"> Register to vote!!!</a>
+    <h2>Nearby Polling locations/Dropboxes</h2>
+    <a href = "https://www.multco.us/dropsites">Ballot dropsites</a>
+    <h2>Upcoming Elections</h2>
+    <a href= "https://ballotpedia.org/Elections_calendar">Election calendar</a>
+  </div>
+  <div id = "notOldEnough">
+    <h1>You're not old enough to vote yet.</h1>
+    <h3>Here are some resources you can use in the meanwhile:</h3>
+    <a href ="https://www.ncsl.org/research/elections-and-campaigns/preregistration-for-young-voters.aspx">Information about early registration</a>
+    <a href ="https://www.fairvote.org/voter_pre_registration"><br>More information on preregistration</a>
+  </div>
 </body>
 </html>
